# seo-overview

./: .gitignore  .mcp.json  CLAUDE.md  README.md  install.sh  package-plugin.sh  pyproject.toml  seo-overview.plugin.sha256
.claude-plugin/: plugin.json
agents/review-report/: AGENT.md
agents/seo-analyst/: AGENT.md
skills/seo-overview/: SKILL.md
src/: install.py  plugin_dir.py  server.py
src/core/: data_processor.py  drive_reader.py  report_generator.py  session_store.py
src/tools/: analysis_tools.py  input_tools.py  report_tools.py
templates/: report.html.j2  styles.css
tests/: conftest.py  test_data_processor.py  test_drive_reader.py  test_report_generator.py  test_scan_folder.py  test_session_store.py
